<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="LOGIN"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/btn_mystatements"
        android:id="@+id/logintext"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@id/logintext">

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/cellnumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/driver_button_layout"
            android:hint="Cell Number"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/driver_button_layout"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/btn_mystatements"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/btn_login"
            android:textColor="@color/white" />


        <!-- Link to Login Screen -->

        <Button

            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="Forgot your Password?"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>